# PokemonStadiumRecomp

./: .gitignore  .gitmodules  AUDIO_CRACKLE.md  CMakeLists.txt  COSIM.md  ISSUES.md  NOTES_TO_CODEX.md  README.md  TEMP_PATCHES.md  _package_release.ps1  _release_notes_v0.4.6-beta.md  aspMain.us.1.0.toml  build_cosim.bat  build_diag.bat  build_ssanne.bat  build_trace.bat  extras.c  fragments_relocatable.txt  game.toml  n64recomp.pin
_issue_logs/: ANALYSIS_issue9_geo.md  softlock_partyselect_cup.report.json
_issue_logs/16/: ANALYSIS.md  last_run_input_history.json  last_run_report.json
assets/: launcher.rml  ss_anne.rcss
assets/img/: boxart.tga
docs/: disasm-build.md  graphics.md
ghidra/: instructions.txt
ghidra/PokemonStadium.rep/: project.prp
ghidra/PokemonStadium.rep/idata/00/: 00000000.prp
ghidra/aspmain/: audio_cmd_list_observed.txt  boot_libultra_trace.jsonl  instructions.txt
include/: input_bindings.h  recompui_launcher.h  trace.h  ui_seam.h
licenses/: OFL-1.1.txt
plans/: multi_instance_fragment_residency.md
rsp/: aspMain.cpp  gbTowerColorMain.cpp  gbTowerColorMain.us.rev1.toml  gbTowerMain.cpp  gbTowerMain.us.rev1.toml  njpgdspMain.cpp
src/main/: app_paths.h  aspmain_refint.cpp  aspmain_replay.cpp  audio_host_probe.cpp  cosim_harness.cpp  debug_server.cpp  gb_audio.cpp  input_bindings.cpp  main.cpp  post_mortem.cpp  recompui_launcher.cpp  rsp_aspmain_hook.cpp  rt64_render_context.cpp  transfer_pak.cpp  transfer_pak.h  ui_seam.cpp
src/ui/: ui_state.cpp
tools/: _adpcm_decode.py  _archive_upstream_prs.sh  _arcload_ring.py  _attract_deep.py  _attract_freeze_quick.py  _attract_no_press.py  _attract_probe.py  _attract_state.py  _attract_timeline.py  _audio_buf_audit.py  _audio_pcm.py  _audio_queue.py  _capture_menu_states.py  _capture_now.py  _capture_panel.py  _capture_softlock.py  _census_fragment62_pattern_relocs.py  _check_7008.py  _check_copy_prot.py  _check_d800a7464.py  _check_dispatch_table_old.py  _check_frag31_magic.py  _check_frag4_quick.py  _check_fragment4_base.py  _check_fragment8_layout.py  _check_parent_now.py  _check_rom_pers.py  _check_segments.py  _cmd.py  _combine_bits.py  _compare_gdl.py  _compare_gdl_old.py  _count_bad_gdls.py  _crop2.py  _crop_screenshot.py  _dbg_drive.py  _decode_audio_cmds.py  _decode_combine_oneshot.py  _decode_dl.py  _decode_frag31_unk_table.py  (+160 more)
